--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,8 @@ lib_LTLIBRARIES = \
 libmakestate.la \
 libbsd.la \
 libmksdmsi18n.la \
-libmksh.la
+libmksh.la \
+libvroot.la
 
 libmakestate_la_LDFLAGS = -version-info 1:0:0
 libmakestate_la_SOURCES = \
@@ -45,3 +46,33 @@ usr/src/make_src/Make/lib/mksh/src/misc.cc \
 usr/src/make_src/Make/lib/mksh/src/mksh.cc \
 usr/src/make_src/Make/lib/mksh/src/read.cc
 
+libvroot_la_LDFLAGS = -static
+libvroot_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(top_srcdir)/usr/src/make_src/Make/include
+libvroot_la_SOURCES = \
+usr/src/make_src/Make/include/vroot/args.h \
+usr/src/make_src/Make/include/vroot/report.h \
+usr/src/make_src/Make/include/vroot/vroot.h \
+usr/src/make_src/Make/lib/vroot/src/access.cc \
+usr/src/make_src/Make/lib/vroot/src/args.cc \
+usr/src/make_src/Make/lib/vroot/src/chdir.cc \
+usr/src/make_src/Make/lib/vroot/src/chmod.cc \
+usr/src/make_src/Make/lib/vroot/src/chown.cc \
+usr/src/make_src/Make/lib/vroot/src/chroot.cc \
+usr/src/make_src/Make/lib/vroot/src/creat.cc \
+usr/src/make_src/Make/lib/vroot/src/execve.cc \
+usr/src/make_src/Make/lib/vroot/src/lock.cc \
+usr/src/make_src/Make/lib/vroot/src/lstat.cc \
+usr/src/make_src/Make/lib/vroot/src/mkdir.cc \
+usr/src/make_src/Make/lib/vroot/src/mount.cc \
+usr/src/make_src/Make/lib/vroot/src/open.cc \
+usr/src/make_src/Make/lib/vroot/src/readlink.cc \
+usr/src/make_src/Make/lib/vroot/src/report.cc \
+usr/src/make_src/Make/lib/vroot/src/rmdir.cc \
+usr/src/make_src/Make/lib/vroot/src/setenv.cc \
+usr/src/make_src/Make/lib/vroot/src/stat.cc \
+usr/src/make_src/Make/lib/vroot/src/statfs.cc \
+usr/src/make_src/Make/lib/vroot/src/truncate.cc \
+usr/src/make_src/Make/lib/vroot/src/unlink.cc \
+usr/src/make_src/Make/lib/vroot/src/unmount.cc \
+usr/src/make_src/Make/lib/vroot/src/utimes.cc \
+usr/src/make_src/Make/lib/vroot/src/vroot.cc
