sunmake (2006.12.19-1) unstable; urgency=low
  * sunmake should depends on libmakestate1.
    libmakestate.so.1 is used by sunld to report .make.state info back to
    sunmake.  sunmake defines environment variable which instruct sunld to
    dlopen() libmakestate.so.1
  * Use 3.0 (quilt) format, not native

--- a/debian/control
+++ b/debian/control
@@ -13,12 +13,15 @@ Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: sunmake support library
+ libmakestate.so.1 is used by sunld to report .make.state info back to
+ sunmake.  sunmake defines environment variable which instruct sunld to
+ dlopen() libmakestate.so.1
 
 Package: sunmake
 Priority: optional
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, sunmake-data
+Depends: ${shlibs:Depends}, ${misc:Depends}, sunmake-data, libmakestate1
 Description: Sun/Solaris "make" utility (dmake predecessor)
  This is a "make" program that can be used to build illumos sources.
  .
