--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: sunmake
 Priority: optional
 Section: devel
 Maintainer: Igor Pashev <pashev.igor@gmail.com>
-Build-Depends: debhelper (>= 9), g++, libtool, automake, autoconf, dh-autoreconf
+Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.3
 
 Package: libmakestate1
